[package]
name = "yun139"
version = "0.1.0"
edition = "2021"

[lib]
name = "yun139"
path = "src/lib.rs"

[[bin]]
name = "yun139-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
futures-util = "0.3"
tracing = "0.1"
base64 = "0.22"
md-5 = "0.11"
hex = "0.4"
rand = "0.8"
chrono = "0.4"
digest = "0.11"
sha2 = "0.11"
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
indicatif = "0.17"
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
